--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href= "css/style.css">
+  </head>
+  <body>
+  <img src="/images/gray-canvas.png">
+  <img src="/images/karlie-kloss.png">
+  <img src="https://s3.amazonaws.com/upperline/curriculum-assets/swarovski_logo_v2016.png" hspace="10" style="border-radius: 25px; margin-bottom: 10px;">
+
+
+  </body>
+
+</html> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,23 +25,32 @@
     <div id="painting">
         <div id="karlie">
             <!-- insert image of Karlie Kloss -->
+            <img src="/images/karlie-kloss.png">
+
+
         </div>
 
         <div id="top-box"></div>
-        
+
         <div id="logo">
             <!-- insert image of swarovski logo -->
+
+            <img src="https://s3.amazonaws.com/upperline/curriculum-assets/swarovski_logo_v2016.png" hspace="10" style="border-radius: 25px; margin-bottom: 10px;">
+
         </div>
 
         <div id="be-brilliant">
             <!-- level one header with be brilliant hashtage -->
+          <h1> #BeBrilliant </h1>
         </div>
 
         <div id="left-column-bottom-row">
             <div class="bottom-box"></div>
             <div id="text-box">
                 <!-- level one header of Karlie meets....[all caps] -->
+                <h2> KARLIE MEETS SWAROVSKI </h2>
                 <!-- paragraph text "...love at first sight..." -->
+                <p> And it's love at first sight. Our new face for Fall/Winter 2016 Karlie Kloss discovers the right way to say Swarovski </p>
             </div>
             <div class="bottom-box"></div>
         </div>
